--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <h2 class="header__subtitle">Какие современные и эффективные подходы
+      <p class="header__subtitle">Какие современные и эффективные подходы
         к обучению вы можете использовать в своей жизни?
         <a href="#" class="header__link">Узнать →</a>
-      </h2>
+      </p>
       <img class="header__main-illustration" src="./images/header-image.png"
         alt="иллюстрация по мотивам картины Федора Решетникова 'Опять двойка'">
       <div class="header__square-pic"></div>
@@ -28,7 +28,7 @@
     <main class="content">
 
       <section class="description">
-        <div class="two-columns">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
@@ -45,7 +45,7 @@
               захватывающим. Эти же техники применяются на примере обучения в Практикуме.
             </p>
           </div>
-        </div>
+        </article>
       </section>
 
       <section class="digits">
@@ -160,7 +160,7 @@
           </li>
 
         </ol>
-        <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="">
+        <div class="kaufman__triangle"></div>
       </section>
 
     </main>
@@ -170,7 +170,7 @@
 
         <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
-          <div class="footer__author">&copy; София Вейтко</div>
+          <p class="footer__author">&copy; София Вейтко</p>
         </div>
 
         <nav class="footer__column footer__column_content_info">
