--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main class="content">
 
-      <section class="description">
+      <section class="description" aria-label="Главные проблемы в обучении">
         <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
           <div class="two-columns__main-text">
