--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы
         к обучению вы можете использовать в своей жизни?
-        <a href="#" class="header__link">Узнать →</a>
+        <a href="#" class="header__link link-opacity">Узнать →</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png"
         alt="иллюстрация по мотивам картины Федора Решетникова 'Опять двойка'">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
 
     <main class="content">
@@ -46,6 +46,75 @@
             </p>
           </div>
         </article>
+      </section>
+
+      <section class="techniques">
+        <h2 class="section-title">Техники обучения</h2>
+        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <ul class="cards">
+
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png"
+        alt="иллюстрация Два вида внимания">
+            <h4 class="cards__title">Два вида внимания</h4>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+          </li>
+
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png"
+        alt="иллюстрация Recall">
+            <h4 class="cards__title">Recall</h4>
+            <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
+          </li>
+
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-interliving.png"
+        alt="иллюстрация Интерливинг">
+            <h4 class="cards__title">Интерливинг</h4>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+          </li>
+
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png"
+        alt="иллюстрация Вопросы">
+            <h4 class="cards__title">Вопросы</h4>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+          </li>
+
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png"
+        alt="иллюстрация Иллюзия компетентности">
+            <h4 class="cards__title">Иллюзия компетентности</h4>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+          </li>
+
+        </ul>
+      </section>
+
+      <section class="video">
+        <h2 class="section-title">Видео нa TED</h2>
+        <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
+        <div class="video__iframes" >
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+
+      <section class="oakley" aria-label="История Барбары Оакли">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">История Барбары Оакли.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+            </p>
+          </div>
+        </article>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a href="#" class="feynman__link link-opacity">Подробнее →</a>
       </section>
 
       <section class="digits">
@@ -98,10 +167,21 @@
         </ul>
       </section>
 
-      <section class="feynman">
-        <h2 class="feynman__title">Метод Фейнмана</h2>
-        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
-        <a href="#" class="feynman__link">Подробнее →</a>
+      <section class="khan">
+        <div class="khan__container">
+          <h3 class="khan__author">Салман Хан</h3>
+          <h2 class="khan__title">Весь мир — школа</h3>
+          <article class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
+          </article>
+          <p class="khan__quote-author">Джордж Лукас</p>
+          <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+          <div class="khan__book-container">
+            <img class="khan__book-pic" src="./images/khan-book.jpg"
+          alt="обложка книги'Весь мир — школа'">
+            <a href="#" class="khan__buy-link link-opacity">Купить книгу →</a>
+          </div>
+        </div>
       </section>
 
       <section class="kaufman">
@@ -160,7 +240,43 @@
           </li>
 
         </ol>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
+      </section>
+
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <h3 class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</h3>
+        <ul class="resources__logo-zone">
+
+          <li>
+            <a href="#" class="resources__link link-opacity">
+              <img class="resources__logo" src="./images/logo/resources-arzamas.svg"
+        alt="Arzamas">
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="resources__link link-opacity">
+              <img class="resources__logo" src="./images/logo/resources-n1.svg"
+        alt="N+1">
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="resources__link link-opacity">
+              <img class="resources__logo" src="./images/logo/resources-strelka.svg"
+        alt="N+1">
+            </a>
+          </li>
+
+          <li>
+            <a href="#" class="resources__link link-opacity">
+              <img class="resources__logo" src="./images/logo/resources-polka.svg"
+        alt="N+1">
+            </a>
+          </li>
+
+        </ul>
       </section>
 
     </main>
@@ -178,15 +294,15 @@
           <ul class="footer__column-links">
 
             <li>
-              <a href="#" class="footer__column-link">Главная</a>
+              <a href="#" class="footer__column-link link-opacity">Главная</a>
             </li>
 
             <li>
-              <a href="#" class="footer__column-link">Концепция</a>
+              <a href="#" class="footer__column-link link-opacity">Концепция</a>
             </li>
 
             <li>
-              <a href="#" class="footer__column-link">Наставники</a>
+              <a href="#" class="footer__column-link link-opacity">Наставники</a>
             </li>
 
           </ul>
@@ -197,17 +313,17 @@
           <ul class="footer__column-links">
 
             <li>
-              <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/youtube-icon.svg"
+              <a href="#" class="footer__column-link link-opacity"><img class="footer__social-icon" src="./images/youtube-icon.svg"
                   alt="логотип Youtube">YouTube</a>
             </li>
 
             <li>
-              <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/vk_color_white.svg"
+              <a href="#" class="footer__column-link link-opacity"><img class="footer__social-icon" src="./images/vk_color_white.svg"
                   alt="логотип ВКонтакте">ВКонтакте</a>
             </li>
 
             <li>
-              <a href="#" class="footer__column-link"><img class="footer__social-icon" src="./images/tiktok-icon.svg"
+              <a href="#" class="footer__column-link link-opacity"><img class="footer__social-icon" src="./images/tiktok-icon.svg"
                   alt="логотип TikTok">TikTok</a>
             </li>
 
