--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css">
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./pages/index.css">
   <title>Научиться учиться</title>
   <meta name="author" content="София Вейтко">
 </head>
@@ -54,38 +53,36 @@
         <ul class="cards">
 
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-attention.png"
-        alt="иллюстрация Два вида внимания">
+            <img class="cards__image" src="./images/cards-attention.png" alt="иллюстрация Два вида внимания">
             <h4 class="cards__title">Два вида внимания</h4>
-            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+              мышление.</p>
           </li>
 
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-recall.png"
-        alt="иллюстрация Recall">
+            <img class="cards__image" src="./images/cards-recall.png" alt="иллюстрация Recall">
             <h4 class="cards__title">Recall</h4>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </li>
 
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-interliving.png"
-        alt="иллюстрация Интерливинг">
+            <img class="cards__image" src="./images/cards-interliving.png" alt="иллюстрация Интерливинг">
             <h4 class="cards__title">Интерливинг</h4>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </li>
 
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-question.png"
-        alt="иллюстрация Вопросы">
+            <img class="cards__image" src="./images/cards-question.png" alt="иллюстрация Вопросы">
             <h4 class="cards__title">Вопросы</h4>
-            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
+            <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно
+              волнует.</p>
           </li>
 
           <li class="cards__item">
-            <img class="cards__image" src="./images/cards-competence.png"
-        alt="иллюстрация Иллюзия компетентности">
+            <img class="cards__image" src="./images/cards-competence.png" alt="иллюстрация Иллюзия компетентности">
             <h4 class="cards__title">Иллюзия компетентности</h4>
-            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
+            <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы
+              владеете новой темой.</p>
           </li>
 
         </ul>
@@ -94,9 +91,13 @@
       <section class="video">
         <h2 class="section-title">Видео нa TED</h2>
         <h3 class="section-subtitle">Для тех, кто любит прокрастинировать</h3>
-        <div class="video__iframes" >
-            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
       </section>
 
@@ -105,7 +106,11 @@
           <h2 class="two-columns__brief">История Барбары Оакли.</h2>
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
-              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
+              С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не
+              самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в
+              командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой
+              подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо
+              глубже, чем у тех, кому всё ясно с первого взгляда.
             </p>
           </div>
         </article>
@@ -170,15 +175,16 @@
       <section class="khan">
         <div class="khan__container">
           <h3 class="khan__author">Салман Хан</h3>
-          <h2 class="khan__title">Весь мир — школа</h3>
-          <article class="khan__quote">
-            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.
-          </article>
+          <h2 class="khan__title">Весь мир — школа</h2>
+          <p class="khan__quote">
+            Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир —
+            школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и
+            знания, которые приносят успех в школе, карьере и жизни.
+          </p>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img class="khan__book-pic" src="./images/khan-book.jpg"
-          alt="обложка книги'Весь мир — школа'">
+            <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги'Весь мир — школа'">
             <a href="#" class="khan__buy-link link-opacity">Купить книгу →</a>
           </div>
         </div>
@@ -231,7 +237,8 @@
 
           <li class="table__cell table__cell_theme_dark">
             <h4 class="table__heading table__heading_theme_dark">9</h4>
-            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </p>
           </li>
 
           <li class="table__cell table__cell_theme_dark">
@@ -250,29 +257,25 @@
 
           <li>
             <a href="#" class="resources__link link-opacity">
-              <img class="resources__logo" src="./images/logo/resources-arzamas.svg"
-        alt="Arzamas">
+              <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Проект Арзамас">
             </a>
           </li>
 
           <li>
             <a href="#" class="resources__link link-opacity">
-              <img class="resources__logo" src="./images/logo/resources-n1.svg"
-        alt="N+1">
+              <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Издание Н+1">
             </a>
           </li>
 
           <li>
             <a href="#" class="resources__link link-opacity">
-              <img class="resources__logo" src="./images/logo/resources-strelka.svg"
-        alt="N+1">
+              <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="КБ Стрелка">
             </a>
           </li>
 
           <li>
             <a href="#" class="resources__link link-opacity">
-              <img class="resources__logo" src="./images/logo/resources-polka.svg"
-        alt="N+1">
+              <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Проект Полка">
             </a>
           </li>
 
@@ -313,18 +316,18 @@
           <ul class="footer__column-links">
 
             <li>
-              <a href="#" class="footer__column-link link-opacity"><img class="footer__social-icon" src="./images/youtube-icon.svg"
-                  alt="логотип Youtube">YouTube</a>
+              <a href="#" class="footer__column-link link-opacity"><img class="footer__social-icon"
+                  src="./images/youtube-icon.svg" alt="логотип Youtube">YouTube</a>
             </li>
 
             <li>
-              <a href="#" class="footer__column-link link-opacity"><img class="footer__social-icon" src="./images/vk_color_white.svg"
-                  alt="логотип ВКонтакте">ВКонтакте</a>
+              <a href="#" class="footer__column-link link-opacity"><img class="footer__social-icon"
+                  src="./images/vk_color_white.svg" alt="логотип ВКонтакте">ВКонтакте</a>
             </li>
 
             <li>
-              <a href="#" class="footer__column-link link-opacity"><img class="footer__social-icon" src="./images/tiktok-icon.svg"
-                  alt="логотип TikTok">TikTok</a>
+              <a href="#" class="footer__column-link link-opacity"><img class="footer__social-icon"
+                  src="./images/tiktok-icon.svg" alt="логотип TikTok">TikTok</a>
             </li>
 
           </ul>
