--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
       <section class="techniques">
         <h2 class="section-title">Техники обучения</h2>
-        <h3 class="section-subtitle">Пять практик от Барбары Оакли</h3>
+        <p class="section-subtitle">Пять практик от Барбары Оакли</p>
         <ul class="cards">
 
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-attention.png" alt="иллюстрация Два вида внимания">
             <h4 class="cards__title">Два вида внимания</h4>
-            <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное
+            <p class="cards__description">Глубокие знания возникают,&nbsp;если&emsp13;чередовать&emsp13;сфокусированное и рассеянное
               мышление.</p>
           </li>
 
@@ -68,7 +68,7 @@
           <li class="cards__item">
             <img class="cards__image" src="./images/cards-interliving.png" alt="иллюстрация Интерливинг">
             <h4 class="cards__title">Интерливинг</h4>
-            <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+            <p class="cards__description">Изучайте несколько навыков одновременно, они&nbsp;обогащают друг друга.</p>
           </li>
 
           <li class="cards__item">
@@ -107,7 +107,7 @@
           <div class="two-columns__main-text">
             <p class="two-columns__paragraph">
               С детства Барбаре не давалась математика. Она считала себя законченным гуманитарием, причём далеко не
-              самым умным. В армии она изучала русский язык, чтобы получить надбавку, да так успешно, что её выдвинули в
+              самым умным. В армии она изучала русский язык, чтобы&nbsp;получить надбавку, да так успешно, что её выдвинули в
               командиры. Но для продвижения по службе нужно было сдавать математику. И тогда Барбара придумала свой
               подход к точным наукам. Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо
               глубже, чем у тех, кому всё ясно с первого взгляда.
@@ -174,7 +174,7 @@
 
       <section class="khan">
         <div class="khan__container">
-          <h3 class="khan__author">Салман Хан</h3>
+          <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
           <p class="khan__quote">
             Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир —
@@ -185,7 +185,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book.jpg" alt="обложка книги'Весь мир — школа'">
-            <a href="#" class="khan__buy-link link-opacity">Купить книгу →</a>
+            <a href="#" class="khan__buy-link link-opacity">Купить&nbsp;книгу&nbsp;→</a>
           </div>
         </div>
       </section>
